src/test/deca/context/invalid/SansObjet/DeclVar-Mult-float-boolean-boolean.deca
// Description:
//    Declaration of a float variable using * operation between a boolean variable and boolean .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    boolean x =  true; 
    boolean y = true; 
    float z = x * y ; 
}
